Add backdrop option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
             <mat-datepicker-toggle [for]="picker" matSuffix></mat-datepicker-toggle>
         </div>
 
-        <kles-mat-datepicker #picker></kles-mat-datepicker>
+        <kles-mat-datepicker #picker [hasBackdrop]="true"></kles-mat-datepicker>
     </mat-form-field>
 
 </form>
