--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,7 @@
         <div matSuffix>
             <mat-datepicker-toggle [for]="picker" matSuffix></mat-datepicker-toggle>
         </div>
-
-        <kles-mat-datepicker #picker [hasBackdrop]="true"></kles-mat-datepicker>
+        <kles-mat-datepicker #picker [hasBackdrop]="false"></kles-mat-datepicker>
     </mat-form-field>
 
 </form>
