--- a/projects/kles-material-datepicker/src/lib/timepicker/timepicker.component.html
+++ b/projects/kles-material-datepicker/src/lib/timepicker/timepicker.component.html
@@ -13,7 +13,7 @@
 
     <div>
         <form [formGroup]="form">
-            <mat-form-field appearance="outline" class="time-picker-input">
+            <mat-form-field appearance="outline" class="time-picker-input" subscriptSizing="dynamic">
                 <span matPrefix>
                     <mat-icon  class="time-picker-icon">schedule</mat-icon>
                 </span>
